# RAG_patterns

./: .env.dist  README.md  pyproject.toml
Assets/: Corrective_RAG_Pattern.py  Memory_Augmented_RAG_Pattern.py  New Microsoft Word Document.docx  Query_Rewrite_Pattern.py  agentic_rag.py
src/data_preparation/: ingest_data.py
