[project]
name = "rag-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "openai>=1.97.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
